welcome.lessons.welcome.loopdowhile.Poucet1.scala.error
Poucet:3: error: not found: value nbbaggles
  nbbaggles=0
  ^Poucet:6: error: not found: value nbbaggles
      nbbaggles= nbbaggles + 1
      ^Poucet:10: error: not found: value nbbaggles
  if (nbbaggles <= 2) {
      ^Poucet:12: error: not found: value nbbaggles
  } else if (nbbaggles >= 3) {
             ^